--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,8 @@ Flask==2.3.3
 Werkzeug==2.3.7
 boto3==1.28.62
 botocore==1.31.62
-googletrans==4.0.0-rc1
-gTTS==2.3.2
-uuid==1.30
+requests==2.31.0
 PyPDF2==3.0.1
 python-docx==0.8.11
-moviepy==1.0.3
-SpeechRecognition==3.10.0
+gTTS==2.3.2
+urllib3==1.26.16
